antlr4_propos/contractParser.cpp

// Generated from contract.g4 by ANTLR 4.13.1


#include "contractListener.h"

#include "contractParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ContractParserStaticData final {
  ContractParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ContractParserStaticData(const ContractParserStaticData&) = delete;
  ContractParserStaticData(ContractParserStaticData&&) = delete;
  ContractParserStaticData& operator=(const ContractParserStaticData&) = delete;
  ContractParserStaticData& operator=(ContractParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag contractParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ContractParserStaticData *contractParserStaticData = nullptr;

void contractParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (contractParserStaticData != nullptr) {
    return;
  }
#else
  assert(contractParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ContractParserStaticData>(
    std::vector<std::string>{
      "file", "init", "stat", "cond", "propos", "com", "quan", "expr"
    },
    std::vector<std::string>{
      "", "'('", "')'", "", "", "", "", "", "", "", "'+'", "'-'", "'*'", 
      "'/'", "'%'", "'^'", "", "", "':'", "','", "'.'"
    },
    std::vector<std::string>{
      "", "", "", "ASS", "GUA", "LOP", "TOP", "QUAN", "VALUE", "VAR", "ADD", 
      "SUB", "MUL", "DIV", "MOD", "POW", "RANGE", "COMP", "COLON", "COMMA", 
      "POINT", "SKIP1", "SKIP2", "NEWLINE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  contractParserStaticData = staticData.release();
}

}

contractParser::contractParser(TokenStream *input) : contractParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

contractParser::contractParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  contractParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *contractParserStaticData->atn, contractParserStaticData->decisionToDFA, contractParserStaticData->sharedContextCache, options);
}

contractParser::~contractParser() {
  delete _interpreter;
}

const atn::ATN& contractParser::getATN() const {
  return *contractParserStaticData->atn;
}

std::string contractParser::getGrammarFileName() const {
  return "contract.g4";
}

const std::vector<std::string>& contractParser::getRuleNames() const {
  return contractParserStaticData->ruleNames;
}

const dfa::Vocabulary& contractParser::getVocabulary() const {
  return contractParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView contractParser::getSerializedATN() const {
  return contractParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

contractParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* contractParser::FileContext::EOF() {
  return getToken(contractParser::EOF, 0);
}

tree::TerminalNode* contractParser::FileContext::ASS() {
  return getToken(contractParser::ASS, 0);
}

contractParser::InitContext* contractParser::FileContext::init() {
  return getRuleContext<contractParser::InitContext>(0);
}

std::vector<tree::TerminalNode *> contractParser::FileContext::GUA() {
  return getTokens(contractParser::GUA);
}

tree::TerminalNode* contractParser::FileContext::GUA(size_t i) {
  return getToken(contractParser::GUA, i);
}

std::vector<contractParser::StatContext *> contractParser::FileContext::stat() {
  return getRuleContexts<contractParser::StatContext>();
}

contractParser::StatContext* contractParser::FileContext::stat(size_t i) {
  return getRuleContext<contractParser::StatContext>(i);
}


size_t contractParser::FileContext::getRuleIndex() const {
  return contractParser::RuleFile;
}

void contractParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void contractParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

contractParser::FileContext* contractParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, contractParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(18);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == contractParser::ASS) {
      setState(16);
      match(contractParser::ASS);
      setState(17);
      init();
    }
    setState(22); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(20);
      match(contractParser::GUA);
      setState(21);
      stat();
      setState(24); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == contractParser::GUA);
    setState(26);
    match(contractParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitContext ------------------------------------------------------------------

contractParser::InitContext::InitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<contractParser::InitContext *> contractParser::InitContext::init() {
  return getRuleContexts<contractParser::InitContext>();
}

contractParser::InitContext* contractParser::InitContext::init(size_t i) {
  return getRuleContext<contractParser::InitContext>(i);
}

std::vector<tree::TerminalNode *> contractParser::InitContext::LOP() {
  return getTokens(contractParser::LOP);
}

tree::TerminalNode* contractParser::InitContext::LOP(size_t i) {
  return getToken(contractParser::LOP, i);
}

std::vector<contractParser::CondContext *> contractParser::InitContext::cond() {
  return getRuleContexts<contractParser::CondContext>();
}

contractParser::CondContext* contractParser::InitContext::cond(size_t i) {
  return getRuleContext<contractParser::CondContext>(i);
}


size_t contractParser::InitContext::getRuleIndex() const {
  return contractParser::RuleInit;
}

void contractParser::InitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit(this);
}

void contractParser::InitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit(this);
}

contractParser::InitContext* contractParser::init() {
  InitContext *_localctx = _tracker.createInstance<InitContext>(_ctx, getState());
  enterRule(_localctx, 2, contractParser::RuleInit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(28);
      match(contractParser::T__0);
      setState(29);
      init();
      setState(34);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == contractParser::LOP) {
        setState(30);
        match(contractParser::LOP);
        setState(31);
        init();
        setState(36);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(37);
      match(contractParser::T__1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      match(contractParser::T__0);
      setState(40);
      cond();
      setState(43); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(41);
        match(contractParser::LOP);
        setState(42);
        cond();
        setState(45); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == contractParser::LOP);
      setState(47);
      match(contractParser::T__1);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(49);
      cond();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

contractParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<contractParser::StatContext *> contractParser::StatContext::stat() {
  return getRuleContexts<contractParser::StatContext>();
}

contractParser::StatContext* contractParser::StatContext::stat(size_t i) {
  return getRuleContext<contractParser::StatContext>(i);
}

std::vector<tree::TerminalNode *> contractParser::StatContext::LOP() {
  return getTokens(contractParser::LOP);
}

tree::TerminalNode* contractParser::StatContext::LOP(size_t i) {
  return getToken(contractParser::LOP, i);
}

std::vector<contractParser::ProposContext *> contractParser::StatContext::propos() {
  return getRuleContexts<contractParser::ProposContext>();
}

contractParser::ProposContext* contractParser::StatContext::propos(size_t i) {
  return getRuleContext<contractParser::ProposContext>(i);
}


size_t contractParser::StatContext::getRuleIndex() const {
  return contractParser::RuleStat;
}

void contractParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void contractParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}

contractParser::StatContext* contractParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 4, contractParser::RuleStat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      match(contractParser::T__0);
      setState(53);
      stat();
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == contractParser::LOP) {
        setState(54);
        match(contractParser::LOP);
        setState(55);
        stat();
        setState(60);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(61);
      match(contractParser::T__1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(63);
      match(contractParser::T__0);
      setState(64);
      propos();
      setState(67); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(65);
        match(contractParser::LOP);
        setState(66);
        propos();
        setState(69); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == contractParser::LOP);
      setState(71);
      match(contractParser::T__1);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(73);
      propos();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CondContext ------------------------------------------------------------------

contractParser::CondContext::CondContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<contractParser::ComContext *> contractParser::CondContext::com() {
  return getRuleContexts<contractParser::ComContext>();
}

contractParser::ComContext* contractParser::CondContext::com(size_t i) {
  return getRuleContext<contractParser::ComContext>(i);
}

std::vector<contractParser::QuanContext *> contractParser::CondContext::quan() {
  return getRuleContexts<contractParser::QuanContext>();
}

contractParser::QuanContext* contractParser::CondContext::quan(size_t i) {
  return getRuleContext<contractParser::QuanContext>(i);
}

std::vector<tree::TerminalNode *> contractParser::CondContext::LOP() {
  return getTokens(contractParser::LOP);
}

tree::TerminalNode* contractParser::CondContext::LOP(size_t i) {
  return getToken(contractParser::LOP, i);
}


size_t contractParser::CondContext::getRuleIndex() const {
  return contractParser::RuleCond;
}

void contractParser::CondContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCond(this);
}

void contractParser::CondContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCond(this);
}

contractParser::CondContext* contractParser::cond() {
  CondContext *_localctx = _tracker.createInstance<CondContext>(_ctx, getState());
  enterRule(_localctx, 6, contractParser::RuleCond);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case contractParser::QUAN: {
        enterOuterAlt(_localctx, 1);
        setState(77); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(76);
          quan();
          setState(79); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == contractParser::QUAN);
        setState(82);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
        case 1: {
          setState(81);
          match(contractParser::T__0);
          break;
        }

        default:
          break;
        }
        setState(84);
        match(contractParser::T__0);
        setState(85);
        com();
        setState(90);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == contractParser::LOP) {
          setState(86);
          match(contractParser::LOP);
          setState(87);
          com();
          setState(92);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(93);
        match(contractParser::T__1);
        setState(110);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
        case 1: {
          setState(94);
          match(contractParser::LOP);
          setState(95);
          match(contractParser::T__0);
          setState(99);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while ((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 770) != 0)) {
            setState(96);
            com();
            setState(101);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(106);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == contractParser::LOP) {
            setState(102);
            match(contractParser::LOP);
            setState(103);
            com();
            setState(108);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(109);
          match(contractParser::T__1);
          break;
        }

        default:
          break;
        }
        setState(113);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
        case 1: {
          setState(112);
          match(contractParser::T__1);
          break;
        }

        default:
          break;
        }
        break;
      }

      case contractParser::T__0:
      case contractParser::VALUE:
      case contractParser::VAR: {
        enterOuterAlt(_localctx, 2);
        setState(115);
        com();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProposContext ------------------------------------------------------------------

contractParser::ProposContext::ProposContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<contractParser::ComContext *> contractParser::ProposContext::com() {
  return getRuleContexts<contractParser::ComContext>();
}

contractParser::ComContext* contractParser::ProposContext::com(size_t i) {
  return getRuleContext<contractParser::ComContext>(i);
}

std::vector<contractParser::QuanContext *> contractParser::ProposContext::quan() {
  return getRuleContexts<contractParser::QuanContext>();
}

contractParser::QuanContext* contractParser::ProposContext::quan(size_t i) {
  return getRuleContext<contractParser::QuanContext>(i);
}

std::vector<tree::TerminalNode *> contractParser::ProposContext::LOP() {
  return getTokens(contractParser::LOP);
}

tree::TerminalNode* contractParser::ProposContext::LOP(size_t i) {
  return getToken(contractParser::LOP, i);
}


size_t contractParser::ProposContext::getRuleIndex() const {
  return contractParser::RulePropos;
}

void contractParser::ProposContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPropos(this);
}

void contractParser::ProposContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPropos(this);
}

contractParser::ProposContext* contractParser::propos() {
  ProposContext *_localctx = _tracker.createInstance<ProposContext>(_ctx, getState());
  enterRule(_localctx, 8, contractParser::RulePropos);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(158);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case contractParser::QUAN: {
        enterOuterAlt(_localctx, 1);
        setState(119); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(118);
          quan();
          setState(121); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == contractParser::QUAN);
        setState(124);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
        case 1: {
          setState(123);
          match(contractParser::T__0);
          break;
        }

        default:
          break;
        }
        setState(126);
        match(contractParser::T__0);
        setState(127);
        com();
        setState(132);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == contractParser::LOP) {
          setState(128);
          match(contractParser::LOP);
          setState(129);
          com();
          setState(134);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(135);
        match(contractParser::T__1);
        setState(152);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx)) {
        case 1: {
          setState(136);
          match(contractParser::LOP);
          setState(137);
          match(contractParser::T__0);
          setState(141);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while ((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 770) != 0)) {
            setState(138);
            com();
            setState(143);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(148);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == contractParser::LOP) {
            setState(144);
            match(contractParser::LOP);
            setState(145);
            com();
            setState(150);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(151);
          match(contractParser::T__1);
          break;
        }

        default:
          break;
        }
        setState(155);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx)) {
        case 1: {
          setState(154);
          match(contractParser::T__1);
          break;
        }

        default:
          break;
        }
        break;
      }

      case contractParser::T__0:
      case contractParser::VALUE:
      case contractParser::VAR: {
        enterOuterAlt(_localctx, 2);
        setState(157);
        com();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComContext ------------------------------------------------------------------

contractParser::ComContext::ComContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<contractParser::ExprContext *> contractParser::ComContext::expr() {
  return getRuleContexts<contractParser::ExprContext>();
}

contractParser::ExprContext* contractParser::ComContext::expr(size_t i) {
  return getRuleContext<contractParser::ExprContext>(i);
}

tree::TerminalNode* contractParser::ComContext::COMP() {
  return getToken(contractParser::COMP, 0);
}


size_t contractParser::ComContext::getRuleIndex() const {
  return contractParser::RuleCom;
}

void contractParser::ComContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCom(this);
}

void contractParser::ComContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCom(this);
}

contractParser::ComContext* contractParser::com() {
  ComContext *_localctx = _tracker.createInstance<ComContext>(_ctx, getState());
  enterRule(_localctx, 10, contractParser::RuleCom);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    expr(0);
    setState(161);
    antlrcpp::downCast<ComContext *>(_localctx)->op = match(contractParser::COMP);
    setState(162);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuanContext ------------------------------------------------------------------

contractParser::QuanContext::QuanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* contractParser::QuanContext::QUAN() {
  return getToken(contractParser::QUAN, 0);
}

std::vector<tree::TerminalNode *> contractParser::QuanContext::VAR() {
  return getTokens(contractParser::VAR);
}

tree::TerminalNode* contractParser::QuanContext::VAR(size_t i) {
  return getToken(contractParser::VAR, i);
}

tree::TerminalNode* contractParser::QuanContext::COLON() {
  return getToken(contractParser::COLON, 0);
}

tree::TerminalNode* contractParser::QuanContext::RANGE() {
  return getToken(contractParser::RANGE, 0);
}

std::vector<tree::TerminalNode *> contractParser::QuanContext::COMMA() {
  return getTokens(contractParser::COMMA);
}

tree::TerminalNode* contractParser::QuanContext::COMMA(size_t i) {
  return getToken(contractParser::COMMA, i);
}


size_t contractParser::QuanContext::getRuleIndex() const {
  return contractParser::RuleQuan;
}

void contractParser::QuanContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuan(this);
}

void contractParser::QuanContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuan(this);
}

contractParser::QuanContext* contractParser::quan() {
  QuanContext *_localctx = _tracker.createInstance<QuanContext>(_ctx, getState());
  enterRule(_localctx, 12, contractParser::RuleQuan);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(181);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 25, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(164);
      match(contractParser::QUAN);
      setState(165);
      match(contractParser::T__0);
      setState(166);
      match(contractParser::VAR);
      setState(167);
      match(contractParser::COLON);
      setState(168);
      match(contractParser::RANGE);
      setState(169);
      match(contractParser::T__1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(170);
      match(contractParser::QUAN);
      setState(171);
      match(contractParser::T__0);
      setState(172);
      match(contractParser::VAR);
      setState(177);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == contractParser::COMMA) {
        setState(173);
        match(contractParser::COMMA);
        setState(174);
        match(contractParser::VAR);
        setState(179);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(180);
      match(contractParser::T__1);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

contractParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<contractParser::ExprContext *> contractParser::ExprContext::expr() {
  return getRuleContexts<contractParser::ExprContext>();
}

contractParser::ExprContext* contractParser::ExprContext::expr(size_t i) {
  return getRuleContext<contractParser::ExprContext>(i);
}

tree::TerminalNode* contractParser::ExprContext::POW() {
  return getToken(contractParser::POW, 0);
}

std::vector<tree::TerminalNode *> contractParser::ExprContext::VAR() {
  return getTokens(contractParser::VAR);
}

tree::TerminalNode* contractParser::ExprContext::VAR(size_t i) {
  return getToken(contractParser::VAR, i);
}

std::vector<tree::TerminalNode *> contractParser::ExprContext::COLON() {
  return getTokens(contractParser::COLON);
}

tree::TerminalNode* contractParser::ExprContext::COLON(size_t i) {
  return getToken(contractParser::COLON, i);
}

std::vector<tree::TerminalNode *> contractParser::ExprContext::RANGE() {
  return getTokens(contractParser::RANGE);
}

tree::TerminalNode* contractParser::ExprContext::RANGE(size_t i) {
  return getToken(contractParser::RANGE, i);
}

std::vector<tree::TerminalNode *> contractParser::ExprContext::COMMA() {
  return getTokens(contractParser::COMMA);
}

tree::TerminalNode* contractParser::ExprContext::COMMA(size_t i) {
  return getToken(contractParser::COMMA, i);
}

tree::TerminalNode* contractParser::ExprContext::VALUE() {
  return getToken(contractParser::VALUE, 0);
}

tree::TerminalNode* contractParser::ExprContext::MUL() {
  return getToken(contractParser::MUL, 0);
}

tree::TerminalNode* contractParser::ExprContext::DIV() {
  return getToken(contractParser::DIV, 0);
}

tree::TerminalNode* contractParser::ExprContext::MOD() {
  return getToken(contractParser::MOD, 0);
}

tree::TerminalNode* contractParser::ExprContext::ADD() {
  return getToken(contractParser::ADD, 0);
}

tree::TerminalNode* contractParser::ExprContext::SUB() {
  return getToken(contractParser::SUB, 0);
}


size_t contractParser::ExprContext::getRuleIndex() const {
  return contractParser::RuleExpr;
}

void contractParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void contractParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<contractListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


contractParser::ExprContext* contractParser::expr() {
   return expr(0);
}

contractParser::ExprContext* contractParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  contractParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  contractParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, contractParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(223);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 28, _ctx)) {
    case 1: {
      setState(184);
      match(contractParser::T__0);
      setState(185);
      expr(0);
      setState(186);
      antlrcpp::downCast<ExprContext *>(_localctx)->op = match(contractParser::POW);
      setState(187);
      expr(0);
      setState(188);
      match(contractParser::T__1);
      break;
    }

    case 2: {
      setState(190);
      match(contractParser::VAR);
      setState(196); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(191);
                match(contractParser::T__0);
                setState(192);
                match(contractParser::VAR);
                setState(193);
                match(contractParser::COLON);
                setState(194);
                match(contractParser::RANGE);
                setState(195);
                match(contractParser::T__1);
                break;
              }
